// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CountryListRow > should render 1`] = `
<span
  class=""
  style="display: contents;"
>
  <div
    class="_backgroundColor-0hover-surface2 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _height-t-size-spac100347420 _pr-t-space-spa1360334051 _pl-t-space-spa1360334051 _justifyContent-space-betwe3241 _alignItems-center _cursor-pointer"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa1360334080"
    >
      <div
        class="is_Avatar _display-flex _flexBasis-auto _boxSizing-border-box _minHeight-32px _minWidth-32px _flexShrink-0 _flexDirection-column _alignItems-center _justifyContent-center _position-relative _overflowX-hidden _overflowY-hidden _width-32px _height-32px _maxWidth-32px _maxHeight-32px _borderTopLeftRadius-100000px _borderTopRightRadius-100000px _borderBottomRightRadius-100000px _borderBottomLeftRadius-100000px _pt-0px _pr-0px _pb-0px _pl-0px"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-absolute _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _top-0px _left-0px _right-0px _bottom-0px _zIndex-1"
        >
          <div
            aria-label="Country flag"
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="width: 32px; height: 32px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              style="background-image: url(https://images-country.meld.io/US/flag.svg);"
            />
            <img
              alt="Country flag"
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="https://images-country.meld.io/US/flag.svg"
            />
          </div>
        </div>
        <div
          class="is_AvatarFallback _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-absolute _top-0px _left-0px _right-0px _bottom-0px _zIndex-0 _backgroundColor-neutral3"
        />
      </div>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        United States
      </span>
    </div>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`CountryListRow > should render selected country 1`] = `
<span
  class=""
  style="display: contents;"
>
  <div
    class="_backgroundColor-0hover-surface2 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _height-t-size-spac100347420 _pr-t-space-spa1360334051 _pl-t-space-spa1360334051 _justifyContent-space-betwe3241 _alignItems-center _cursor-pointer"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa1360334080"
    >
      <div
        class="is_Avatar _display-flex _flexBasis-auto _boxSizing-border-box _minHeight-32px _minWidth-32px _flexShrink-0 _flexDirection-column _alignItems-center _justifyContent-center _position-relative _overflowX-hidden _overflowY-hidden _width-32px _height-32px _maxWidth-32px _maxHeight-32px _borderTopLeftRadius-100000px _borderTopRightRadius-100000px _borderBottomRightRadius-100000px _borderBottomLeftRadius-100000px _pt-0px _pr-0px _pb-0px _pl-0px"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-absolute _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _top-0px _left-0px _right-0px _bottom-0px _zIndex-1"
        >
          <div
            aria-label="Country flag"
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="width: 32px; height: 32px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              style="background-image: url(https://images-country.meld.io/US/flag.svg);"
            />
            <img
              alt="Country flag"
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="https://images-country.meld.io/US/flag.svg"
            />
          </div>
        </div>
        <div
          class="is_AvatarFallback _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-absolute _top-0px _left-0px _right-0px _bottom-0px _zIndex-0 _backgroundColor-neutral3"
        />
      </div>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        United States
      </span>
    </div>
    <svg
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="8"
      style="width: 24px; height: 24px; color: rgb(19, 19, 19);"
      viewBox="0 0 48 48"
    >
      <line
        stroke="currentColor"
        x1="11"
        x2="18"
        y1="26"
        y2="33"
      />
      <line
        stroke="currentColor"
        x1="18"
        x2="38"
        y1="33"
        y2="14"
      />
    </svg>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;
